added service worker and snippets

--- a/src/index.html
+++ b/src/index.html
@@ -59,5 +59,12 @@
     </div>
 
     <script src="javascript/weather.js"></script>
+    <script>
+        if('serviceWorker' in navigator) {
+            navigator.serviceWorker
+                   .register('/serviceworker.js')
+                   .then(function() { console.log("Service Worker Registered"); });
+        }
+    </script>
 </body>
 </html>
